--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ social:
 
 # 百度统计 
 # 使用博客模板请去掉或者更换 id 
-#baidu:
-#    id: 8ba1c6be0953b6f9c2ba38e57f615421
+baidu:
+    id: 40416073e6ddff7b9f254149152b899c
 
 # Google Analytics
 # 使用博客模板请去掉或者更换 id
